--- a/index.html
+++ b/index.html
@@ -209,28 +209,12 @@
                     <table id="rankingsTable" class="table table-dark table-hover table-striped w-100">
                         <thead>
                             <tr>
-                                <th>RPI</th>
                                 <th>Team</th>
                                 <th>Conf</th>
                                 <th>W</th>
                                 <th>L</th>
-                                <th>RpiPct</th>
-                                <th>Top25</th>
-                                <th>Top50</th>
-                                <th>ConfRec</th>
-                                <th>NConf</th>
-                                <th>OppRcrd</th>
-                                <th>SosPct</th>
-                                <th>Rnk</th>
-                                <th>Home</th>
-                                <th>Away</th>
-                                <th>Neut</th>
-                                <th>Tp100</th>
-                                <th>100-2</th>
-                                <th>200-</th>
-                                <th>SetsWon</th>
-                                <th>GdW</th>
-                                <th>BdL</th>
+                                <th>FigStats RPI</th>
+                                <th>NCAA Rank</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -737,28 +721,12 @@
                 rankingsData = dataRows.map((row) => {
                     const fields = row.split(",");
                     return {
-                        RPI: fields[0] || "",
-                        Team: fields[1] || "",
-                        Conf: fields[2] || "",
-                        "W": parseInt(fields[3]) || 0,
-                        "L": parseInt(fields[4]) || 0,
-                        RpiPct: parseFloat(fields[5]) || 0,
-                        Top25: parseInt(fields[6]) || 0,
-                        Top50: parseInt(fields[7]) || 0,
-                        ConfRec: fields[8] || "",
-                        NonConf: fields[9] || "",
-                        OppRcrd: fields[10] || "",
-                        SosPct: parseFloat(fields[11]) || 0,
-                        Rnk: parseInt(fields[12]) || 0,
-                        Home: fields[13] || "",
-                        Away: fields[14] || "",
-                        Neut: fields[15] || "",
-                        Tp100: parseInt(fields[16]) || 0,
-                        "100-2": parseInt(fields[17]) || 0,
-                        "200-": parseInt(fields[18]) || 0,
-                        SetsWon: parseInt(fields[19]) || 0,
-                        GdW: parseInt(fields[20]) || 0,
-                        BdL: parseInt(fields[21]) || 0,
+                        Team: fields[0] || "",
+                        Conf: fields[3] || "",
+                        "W": parseInt(fields[1]) || 0,
+                        "L": parseInt(fields[2]) || 0,
+                        "FigStats RPI": parseInt(fields[4]) || 0,
+                        "NCAA Rank": parseInt(fields[5]) || 0,
                     };
                 });
                 populateRankingTable(rankingsData);
@@ -776,28 +744,12 @@
             data.forEach((row) => {
                 const rowElement = document.createElement("tr");
                 rowElement.innerHTML = `
-                    <td>${row.RPI}</td>
                     <td>${row.Team}</td>
                     <td>${row.Conf}</td>
                     <td>${row.W}</td>
                     <td>${row.L}</td>
-                    <td>${row.RpiPct.toFixed(3)}</td>
-                    <td>${row.Top25}</td>
-                    <td>${row.Top50}</td>
-                    <td>${row.ConfRec}</td>
-                    <td>${row.NonConf}</td>
-                    <td>${row.OppRcrd}</td>
-                    <td>${row.SosPct.toFixed(3)}</td>
-                    <td>${row.Rnk}</td>
-                    <td>${row.Home}</td>
-                    <td>${row.Away}</td>
-                    <td>${row.Neut}</td>
-                    <td>${row.Tp100}</td>
-                    <td>${row["100-2"]}</td>
-                    <td>${row["200-"]}</td>
-                    <td>${row.SetsWon}</td>
-                    <td>${row.GdW}</td>
-                    <td>${row.BdL}</td>
+                    <td>${row["FigStats RPI"]}</td>
+                    <td>${row["NCAA Rank"]}</td>
                 `;
                 tbody.appendChild(rowElement);
             });
