--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <h2 class="text-center">Data Sources</h2>
                 <p class="text-center">https://stats.ncaa.org</p>
                 <p class="text-center">https://ncaastats.figstats.net/volleyball-rpi.cgi</p>
+                <p class="text-center">https://www.ncaa.com/rankings/volleyball-women/d1/ncaa-womens-volleyball-rpi</p>
             </div>
 
             <!-- Live tab -->
@@ -255,7 +256,7 @@
                                 <th>Height</th>
                                 <th>Hometown</th>
                                 <th>High School</th>
-                                <th>Team</th>
+                                <th style="width: 200px;">Team</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -890,17 +891,11 @@
 
     <!-- Script to populate Players table -->
     <script>
-        let playersData = [];
-        let currentPlayersSortColumn = "";
-        let isPlayersAscending = true;
-
-        async function fetchPlayersData() {
-            const response = await fetch("https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/players.csv");
-            const csvText = await response.text();
-            const rows = csvText.split("\n").filter((row) => row.trim() !== "");
-            const dataRows = rows.slice(1); // Skip the header row
-            playersData = dataRows.map((row) => {
-                const fields = splitLine(row);
+        // Parse CSV data
+        const parseCSV = (csv) => {
+            const lines = csv.split('\n');
+            return lines.slice(1).filter(line => line.trim() !== '').map(line => {
+                const fields = splitLine(line);
                 return {
                     No: fields[0] || "",
                     Name: fields[1] || "",
@@ -910,160 +905,160 @@
                     Hometown: fields[5] || "",
                     'High School': fields[6] || "",
                     conference_name: fields[8] || "",
-                    team_name: fields[12] || "",
+                    team_short: fields[12] || ""
                 };
             });
-            console.log("Players Data:", playersData);
-            populatePlayersTable(playersData);
-            populateDropdowns();
-            addPlayersSortListeners();
+        };
+
+        // Fetch and process CSV data
+        async function fetchAndProcessData() {
+            try {
+                const response = await fetch("https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/players.csv");
+                const csvData = await response.text();
+                const players = parseCSV(csvData);
+                initializeTable(players);
+            } catch (error) {
+                console.error("Error fetching or parsing CSV data:", error);
+            }
         }
 
-        function populatePlayersTable(data) {
-            const tbody = document.querySelector("#playersTable tbody");
-            tbody.innerHTML = "";
-            data.forEach((row) => {
-                const rowElement = document.createElement("tr");
-                rowElement.innerHTML = `
-      <td style="width:2%">${row.No.trim()}</td>
-      <td style="width:2%">${row.Name.trim()}</td>
-      <td style="width:2%">${row.Class.trim()}</td>
-      <td style="width:2%">${row.Position.trim()}</td>
-      <td style="width:2%">${row.Height.trim()}</td>
-      <td style="width:2%">${row.Hometown.trim()}</td>
-      <td style="width:2%">${row['High School'].trim()}</td>
-      <td style="width:2%">${row.team_name.trim()}</td>
-    `;
-                tbody.appendChild(rowElement);
-            });
-        }
-
-        function populateDropdowns() {
-            const conferenceDropdown = document.getElementById("conference-players-dropdown");
-
-            // Get unique conferences, filter out any empty values
-            const conferences = [...new Set(playersData.map((item) => item.conference_name).filter(Boolean))].sort();
+        function initializeTable(players) {
+            const conferenceDropdown = document.getElementById('conference-players-dropdown');
+            const teamDropdown = document.getElementById('teams-players-dropdown');
+            const playersTable = document.getElementById('playersTable');
 
             // Populate conference dropdown
-            conferences.forEach((conf) => {
-                const option = document.createElement("option");
-                option.value = conf;
-                option.textContent = conf;
+            const uniqueConferences = [...new Set(players.map(player => player.conference_name).filter(conference => conference.trim() !== ''))].sort();
+
+            conferenceDropdown.innerHTML = '<option value="">All Conferences</option>';
+            uniqueConferences.forEach(conference => {
+                const option = document.createElement('option');
+                option.value = conference;
+                option.textContent = conference;
                 conferenceDropdown.appendChild(option);
             });
-        }
 
-        function updateTeamsDropdown() {
-            const selectedConference = document.getElementById("conference-players-dropdown").value;
-            const teamDropdown = document.getElementById("teams-players-dropdown");
+            // Handle conference selection
+            conferenceDropdown.addEventListener('change', (e) => {
+                const selectedConference = e.target.value;
 
-            // Clear current team options
-            teamDropdown.innerHTML = '<option value="">All Teams</option>';
-
-            // Get teams based on selected conference, filter out any empty values
-            const teams = playersData
-                .filter((item) => (selectedConference ? item.conference_name === selectedConference : true)) // Show all teams if no conference is selected
-                .map((item) => item.team_name)
-                .filter(Boolean) // Exclude empty or undefined values
-                .filter((team, index, self) => self.indexOf(team) === index) // Ensure unique teams
-                .sort();
-
-            // Populate team dropdown
-            teams.forEach((team) => {
-                const option = document.createElement("option");
-                option.value = team;
-                option.textContent = team;
-                teamDropdown.appendChild(option);
-            });
-        }
-
-        function filterPlayersTable() {
-            const selectedConference = document.getElementById("conference-players-dropdown").value;
-            const selectedTeam = document.getElementById("teams-players-dropdown").value;
-
-            const filteredData = playersData.filter((row) => {
-                const conferenceMatch = !selectedConference || row.conference_name === selectedConference;
-                const teamMatch = !selectedTeam || row.team_name === selectedTeam;
-                return conferenceMatch && teamMatch;
-            });
-
-            populatePlayersTable(filteredData);
-        }
-
-        function splitLine(line) {
-            const result = [];
-            let currentField = "";
-            let inQuotes = false;
-            for (let char of line) {
-                if (char === '"') {
-                    inQuotes = !inQuotes;
-                } else if (char === "," && !inQuotes) {
-                    result.push(currentField.trim());
-                    currentField = "";
+                // Filter teams based on the selected conference
+                let filteredTeams;
+                if (selectedConference === '') {
+                    // If "All Conferences" is selected, show all teams with a conference affiliation
+                    filteredTeams = players
+                        .filter(player => player.conference_name.trim() !== '') // Exclude teams with no conference affiliation
+                        .map(player => player.team_short);
                 } else {
-                    currentField += char;
+                    // Otherwise, show teams only from the selected conference
+                    filteredTeams = players
+                        .filter(player => player.conference_name === selectedConference)
+                        .map(player => player.team_short);
                 }
-            }
-            result.push(currentField.trim());
-            return result;
-        }
 
-        function addPlayersSortListeners() {
-            const headers = document.querySelectorAll("#playersTable th");
-            headers.forEach((header, index) => {
-                header.addEventListener("click", () => {
-                    const column = Object.keys(playersData[0])[index];
-                    sortPlayersTable(column);
+                const uniqueTeams = [...new Set(filteredTeams)].sort();
+
+                // Clear and repopulate team dropdown
+                teamDropdown.innerHTML = '<option value="">All Teams</option>';
+                uniqueTeams.forEach(team => {
+                    const option = document.createElement('option');
+                    option.value = team;
+                    option.textContent = team;
+                    teamDropdown.appendChild(option);
                 });
-            });
-        }
 
-        function sortPlayersTable(column) {
-            if (currentPlayersSortColumn === column) {
-                isPlayersAscending = !isPlayersAscending;
-            } else {
-                isPlayersAscending = true;
+                updateTable();
+            });
+
+            // Handle team selection
+            teamDropdown.addEventListener('change', updateTable);
+
+            // Update table based on selections
+            function updateTable() {
+                const selectedConference = conferenceDropdown.value;
+                const selectedTeam = teamDropdown.value;
+
+                const filteredPlayers = players.filter(player =>
+                    (selectedConference === '' || player.conference_name === selectedConference) &&
+                    (selectedTeam === '' || player.team_short === selectedTeam)
+                );
+
+                const tbody = playersTable.querySelector('tbody');
+                tbody.innerHTML = '';
+
+                // Sort by team first, then by number (No)
+                filteredPlayers.sort((a, b) => {
+                    // First, compare team names
+                    const teamComparison = a.team_short.localeCompare(b.team_short);
+
+                    // If teams are the same, compare by number
+                    if (teamComparison === 0) {
+                        return parseInt(a.No) - parseInt(b.No);
+                    }
+
+                    // Otherwise, return the team comparison
+                    return teamComparison;
+                });
+
+                // Populate table with sorted players
+                filteredPlayers.forEach(player => {
+                    const row = tbody.insertRow();
+                    row.insertCell().textContent = player.No;
+                    row.insertCell().textContent = player.Name;
+                    row.insertCell().textContent = player.Class;
+                    row.insertCell().textContent = player.Position;
+                    row.insertCell().textContent = player.Height;
+                    row.insertCell().textContent = player.Hometown;
+                    row.insertCell().textContent = player['High School'];
+                    row.insertCell().textContent = player.team_short;
+                });
             }
-            currentPlayersSortColumn = column;
 
-            playersData.sort((a, b) => {
-                let aValue = a[column];
-                let bValue = b[column];
+            // Implement sorting
+            playersTable.querySelector('thead').addEventListener('click', (e) => {
+                if (e.target.tagName === 'TH') {
+                    const headerIndex = Array.from(e.target.parentNode.children).indexOf(e.target);
+                    const isAscending = e.target.classList.toggle('asc'); // Toggle the 'asc' class to determine sort direction
+                    const tbody = playersTable.querySelector('tbody');
+                    const rows = Array.from(tbody.querySelectorAll('tr'));
 
-                // If sorting by 'No', parse the values as integers, handling empty strings
-                if (column === "No") {
-                    aValue = aValue ? parseInt(aValue) : 0;
-                    bValue = bValue ? parseInt(bValue) : 0;
+                    // Sort rows based on the clicked header
+                    rows.sort((a, b) => {
+                        const aValue = a.cells[headerIndex].textContent;
+                        const bValue = b.cells[headerIndex].textContent;
+
+                        if (headerIndex === 0) { // Sort 'No' column as integers
+                            return isAscending ?
+                                parseInt(aValue) - parseInt(bValue) :
+                                parseInt(bValue) - parseInt(aValue);
+                        } else { // Sort other columns as strings
+                            return isAscending ?
+                                aValue.localeCompare(bValue) :
+                                bValue.localeCompare(aValue);
+                        }
+                    });
+
+                    tbody.append(...rows);
+
+                    // Handle CSS classes for sorting
+                    const headers = playersTable.querySelectorAll('th');
+                    headers.forEach(th => {
+                        th.classList.remove("sort-asc", "sort-desc"); // Remove sorting classes from all headers
+                    });
+
+                    // Apply sorting class to the clicked header
+                    e.target.classList.add(isAscending ? "sort-asc" : "sort-desc");
                 }
-
-                // Handle ascending and descending sorting
-                if (aValue < bValue) return isPlayersAscending ? -1 : 1;
-                if (aValue > bValue) return isPlayersAscending ? 1 : -1;
-                return 0;
             });
 
-            // Re-filter the table after sorting, to respect current filters
-            filterPlayersTable();
-
-            // Update the UI to reflect the sort direction
-            document.querySelectorAll("#playersTable th").forEach((th) => {
-                th.classList.remove("sort-asc", "sort-desc");
-            });
-            const currentHeader = document.querySelector(
-                `#playersTable th:nth-child(${Object.keys(playersData[0]).indexOf(column) + 1})`
-            );
-            currentHeader.classList.add(isPlayersAscending ? "sort-asc" : "sort-desc");
+            // Initial table population
+            updateTable();
         }
 
-        document.getElementById("conference-players-dropdown").addEventListener("change", function () {
-            updateTeamsDropdown(); // Update teams based on selected conference
-            filterPlayersTable(); // Filter the table after dropdown change
-        });
-
-        document.getElementById("teams-players-dropdown").addEventListener("change", filterPlayersTable);
-
-        document.addEventListener("DOMContentLoaded", fetchPlayersData);
+        // Call the function to fetch and process data
+        fetchAndProcessData();
     </script>
 
 </body>
+
 </html>
