--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <script defer async data-host="widbuntu.github.io" src="https://liteanalytics.com/lite.js"></script>
 </head>
 <body>
     <!-- Main Container -->
@@ -35,5 +36,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Main script -->
     <script type="module" src="js/main.js"></script>
+    <script>
+        (function() {
+        var scr = document.createElement('script');
+        scr.setAttribute('src', 'https://liteanalytics.com/lite.js');
+        scr.setAttribute('data-host', 'widbuntu.github.io');
+        document.body.appendChild(scr);
+        })();
+        </script>
 </body>
 </html>
