--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Main script -->
     <script type="module" src="js/main.js"></script>
+    <!-- Analytics script -->
     <script>
         (function() {
         var scr = document.createElement('script');
