--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                 <!-- Add a nav-item for the logo -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <a class="nav-link" href="#" id="homeTab">
-                        <img src="assets/favicon.svg" alt="assets/favicon.svg" width="37">
                     </a>
-                    <div class="col-4 col-md-2 m-auto">
+                    <div class="md-1">
                         <select id="categorySelect" class="form-select">
                             <option value="ncaaW">NCAA Women</option>
                             <option value="proW">Pro Women</option>
