--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </a>
                     <div class="md-1">
                         <select id="categorySelect" class="form-select">
-                            <option value="ncaaW">NCAA Women</option>
+                            <option value="ncaaW" selected>NCAA Women</option>
                             <option value="proW">Pro Women</option>
                             <option value="ncaaM">NCAA Men</option>
                         </select>
@@ -502,15 +502,29 @@
         </script>
 
 <script>
-    document.getElementById('categorySelect').addEventListener('change', function () {
-        const categoryText = {
-            ncaaW: "NCAA Women's",
-            proW: "Pro Women's",
-            ncaaM: "NCAA Men's"
-        };
-        // Update the h4 text based on the selected value
-        const selectedValue = this.value;
-        document.getElementById('selectedCategory').textContent = categoryText[selectedValue];
+    document.addEventListener('DOMContentLoaded', function () {
+        const categorySelect = document.getElementById('categorySelect');
+        const liveContentHeader = document.querySelector('#liveContent h3');
+        const resultsContentHeader = document.querySelector('#resultsContent h3');
+        const rankingsContentHeader = document.querySelector('#rankingsContent h3');
+        const teamsContentHeader = document.querySelector('#teamsContent h3');
+        const playersContentHeader = document.querySelector('#playersContent h3');
+
+        // Function to update headers
+        function updateHeaders() {
+            const selectedText = categorySelect.options[categorySelect.selectedIndex].text;
+            liveContentHeader.textContent = `${selectedText} Live`;
+            resultsContentHeader.textContent = `${selectedText} Results`;
+            rankingsContentHeader.textContent = `${selectedText} Rankings`;
+            teamsContentHeader.textContent = `${selectedText} Teams`;
+            playersContentHeader.textContent = `${selectedText} Players`;
+        }
+
+        // Add event listener to dropdown
+        categorySelect.addEventListener('change', updateHeaders);
+
+        // Trigger the function on page load
+        updateHeaders();
     });
 </script>
 
@@ -2268,7 +2282,7 @@
         // Fetch and process CSV data
         async function fetchTeamsData() {
             try {
-                const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/teams2.csv');
+                const response = await fetch('https://raw.githubusercontent.com/widbuntu/vbdb-info/refs/heads/main/data/24NcaaWTeams.csv');
                 if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
                 const csvText = await response.text();
                 const data = parseTeamsCSV(csvText);
